# pFuzzer

./: README.md  clean_experiments.sh  run_evals.sh  run_experiments.sh
afl/: log.txt
afl/cjson/: core  run_exp.sh
afl/cjson/eval/: cJSON.gcda  cJSON.gcno  coverage.cJSON.c.html  coverage.html  eval.py  log.txt  subject  subject.cov  valid_inputs.txt
afl/cjson/findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl/csv/: csv  run_exp.sh
afl/csv/eval/: coverage.csvparser.c.html  coverage.html  csvparser.gcda  csvparser.gcno  eval.py  log.txt  subject  subject.cov  valid_inputs.txt
afl/csv/findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl/ini/: ini  ini.c  run_exp.sh
afl/ini/eval/: coverage.html  coverage.ini.c.html  eval.py  ini.gcda  ini.gcno  ini.h  log.txt  subject  subject.cov  tiny.c  valid_inputs.txt
afl/ini/findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl/mjs/: mjs  mjs.c  run_exp.sh
afl/mjs/eval/: comp_run.sh  coverage.html  eval.py  log.txt  mjs.c  mjs.gcda  mjs.gcno  subject  subject.cov  valid_inputs.txt
afl/mjs/findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
afl/tinyc/: clean.sh  run_exp.sh
klee/: clean_all.sh  run_all.sh
klee/cjson/: cJSON.bc  log.txt  run_exp.sh
klee/csv/: csvparser.bc  csvparser.c  log.txt  run_exp.sh
klee/ini/: ini.bc  log.txt  run_exp.sh
klee/mjs/: log.txt  mjs.bc  run_exp.sh
klee/tinyc/: clean.sh  run_exp.sh
pfuzzer/: README  meson.build
pfuzzer/chains/: chains.py  coverage.py  make_seed.py
pfuzzer/chains/core/: ConversionHandler.py  Heap.py  HeuristicValue.py  InputValue.py  InputWrapper.py  KnowledgeHandling.py  PriorityHandling.py  Pruning.py  SubstitutionExtractor.py  Utils.py  qfuzzer.py
pfuzzer/modules/constraints-build/: meson.build
pfuzzer/modules/constraints-build/scripts/: constraints-build
pfuzzer/modules/constraints-repair/: meson.build
pfuzzer/modules/constraints-repair/scripts/: constraints-repair
pfuzzer/modules/trace-core/: meson.build
pfuzzer/modules/trace-core/include/: trace.h
pfuzzer/modules/trace-core/sources/: parse_json.c
pfuzzer/modules/trace-core/tests/: multi.json  one.json  traceparser_test.c  truncated.json
pfuzzer/modules/trace-instr/: meson.build
pfuzzer/modules/trace-instr/include/: callbacks.h  operators.h  wrapper_libc.h.in
pfuzzer/modules/trace-instr/scripts/: extract_metadata  trace-instr  wrapcall.py
pfuzzer/modules/trace-instr/sources/: traceplugin.cpp
pfuzzer/modules/trace-instr/sources/tracers/: simpletracer.c
pfuzzer/modules/trace-instr/sources/wrappers/: libc.c  main.c
pfuzzer/modules/trace-taint/: meson.build
pfuzzer/modules/trace-taint/scripts/: trace-taint
pfuzzer/modules/trace-taint/sources/: meson.build
pfuzzer/modules/trace-taint/sources/main/: TaintTracker.java
pfuzzer/modules/trace-taint/sources/parser/: GzipJsonParser.java  ITraceParser.java
pfuzzer/modules/trace-taint/sources/taintengine/: NodeMapper.java  Taint.java  TaintEngine.java  TaintVector.java
pfuzzer/modules/trace-taint/sources/taintengine/handlers/: ArrayAccessHandler.java  BinOperationHandler.java  BranchHandler.java  MethodCallHandler.java  MethodEnterExitHandler.java  OperationHandler.java  StructureHandler.java  TaintGenerationHandler.java  TaintPropagationHandler.java
pfuzzer/modules/trace-taint/sources/taintengine/handlers/helperclasses/: ArrayIndexMapper.java  EventSender.java  MessagePackEventSender.java  MethodCallHelper.java  PygmalionEventSender.java  ResourceManager.java  StructureMapper.java
pfuzzer/modules/trace-taint/sources/taintengine/helperclasses/: ProgramInputInformation.java  TypeTree.java
pfuzzer/modules/trace-taint/sources/taintengine/operations/: Alloc.java  Alloca.java  ArithmeticShiftRight.java  BasicBlockEnter.java  BinOperation.java  Br.java  ByteBinOp.java  Call.java  ConcreteOperationFactory.java  ExtractElement.java  ExtractValue.java  FGetc.java  FGets.java  FRead.java  FilePosition.java  Free.java  GenericOperation.java  GetElementPointer.java  Getchar.java  InsertElement.java  InsertValue.java  IsSpace.java  Isoc99FScanf.java  Isoc99SScanf.java  Load.java  LogicalShiftRight.java  MemCopy.java  MethodEntry.java  Operation.java  Read.java  Realloc.java  ReturnInst.java  SExt.java  Scanf.java  SchuffleVector.java  Select.java  ShiftLeft.java  Sprintf.java  Store.java  StrChr.java  (+10 more)
pfuzzer/modules/trace-taint/sources/taintengine/operations/interfaces/: OperationFactory.java
pfuzzer/modules/trace-taint/sources/utils/: AutoGramEvents.java  Effect.java  LineInformation.java  Opcode.java  Operand.java  Predicate.java  TaintType.java  Utils.java
pfuzzer/samples/: clean_all.sh  excluded_functions  run_all.sh
pfuzzer/samples/cjson/: cJSON.c.cov  cJSON.c.gcov  cJSON.c.instrumented  cJSON.c.orig  cJSON.c.uninstrumented  cJSON.c.uninstrumented.bc  cJSON.gcda  cJSON.gcno  coverage.cJSON.c.html  coverage.html  evallog.txt  log.txt  metadata  pyg.txt  run_exp.sh  stats.txt  valid_inputs.txt
pfuzzer/samples/csv/: coverage.csvparser.c.html  coverage.html  csv  csvparser.c.cov  csvparser.c.debug.bc  csvparser.c.gcov  csvparser.c.instrumented  csvparser.c.opt_debug.bc  csvparser.c.uninstrumented  csvparser.c.uninstrumented.bc  csvparser.gcda  csvparser.gcno  evallog.txt  log.txt  metadata  stats.txt  valid_inputs.txt
pfuzzer/samples/ini/: clean.sh  coverage.html  coverage.ini.c.html  crashes.txt  evallog.txt  get_cov.sh  ini  ini.c.cov  ini.c.debug.bc  ini.c.gcov  ini.c.instrumented  ini.c.opt_debug.bc  ini.c.orig  ini.c.uninstrumented  ini.c.uninstrumented.bc  ini.gcda  ini.gcno  log.txt  metadata  pyg.txt  stats.txt  valid_inputs.txt
pfuzzer/samples/mjs/: coverage.html  evallog.txt  log.txt  metadata  mjs  mjs.c.cov  mjs.c.gcov  mjs.c.instrumented  mjs.c.orig  mjs.c.uninstrumented  mjs.gcda  mjs.gcno  pyg.txt  stats.txt  valid_inputs.txt
pfuzzer/samples/tinyc/: evallog.txt  stats.txt  valid_inputs.txt  valid_inputs_orig.txt
pfuzzer/scripts/: setup_llvm_clang.sh  static_analysis_java.py
pfuzzer/tools/: pmd.xml  spotbugs_exclude.xml  spotbugs_include.xml
(+6835 files in other folders)
