tainttracker_sources = [
    'utils/Opcode.java',
    'utils/AutoGramEvents.java',
    'utils/Utils.java',
    'utils/LineInformation.java',
    'utils/Operand.java',
    'utils/Predicate.java',
    'taintengine/handlers/TaintPropagationHandler.java',
    'taintengine/handlers/StructureHandler.java',
    'taintengine/handlers/OperationHandler.java',
    'taintengine/handlers/ArrayAccessHandler.java',
    'taintengine/handlers/BranchHandler.java',
    'taintengine/handlers/MethodEnterExitHandler.java',
    'taintengine/handlers/BinOperationHandler.java',
    'taintengine/handlers/MethodCallHandler.java',
    'taintengine/handlers/helperclasses/StructureMapper.java',
    'taintengine/handlers/helperclasses/MessagePackEventSender.java',
    'taintengine/handlers/helperclasses/PygmalionEventSender.java',
    'taintengine/handlers/helperclasses/ResourceManager.java',
    'taintengine/handlers/helperclasses/EventSender.java',
    'taintengine/handlers/helperclasses/MethodCallHelper.java',
    'taintengine/handlers/helperclasses/ArrayIndexMapper.java',
    'taintengine/handlers/TaintGenerationHandler.java',
    'taintengine/Taint.java',
    'taintengine/NodeMapper.java',
    'taintengine/TaintEngine.java',
    'taintengine/TaintVector.java',
    'taintengine/helperclasses/ProgramInputInformation.java',
    'taintengine/helperclasses/TypeTree.java',
    'taintengine/operations/Select.java',
    'taintengine/operations/ByteBinOp.java',
    'taintengine/operations/StrNCopy.java',
    'taintengine/operations/GenericOperation.java',
    'taintengine/operations/BinOperation.java',
    'taintengine/operations/FilePosition.java',
    'taintengine/operations/InsertValue.java',
    'taintengine/operations/SExt.java',
    'taintengine/operations/Alloca.java',
    'taintengine/operations/LogicalShiftRight.java',
    'taintengine/operations/Scanf.java',
    'taintengine/operations/ArithmeticShiftRight.java',
    'taintengine/operations/ReturnInst.java',
    'taintengine/operations/FGets.java',
    'taintengine/operations/interfaces/OperationFactory.java',
    'taintengine/operations/Realloc.java',
    'taintengine/operations/FGetc.java',
    'taintengine/operations/Read.java',
    'taintengine/operations/TypeChange.java',
    'taintengine/operations/ExtractValue.java',
    'taintengine/operations/SchuffleVector.java',
    'taintengine/operations/Isoc99FScanf.java',
    'taintengine/operations/StrCopy.java',
    'taintengine/operations/Sprintf.java',
    'taintengine/operations/ConcreteOperationFactory.java',
    'taintengine/operations/Free.java',
    'taintengine/operations/ExtractElement.java',
    'taintengine/operations/FRead.java',
    'taintengine/operations/Isoc99SScanf.java',
    'taintengine/operations/StrTo.java',
    'taintengine/operations/Operation.java',
    'taintengine/operations/Load.java',
    'taintengine/operations/MemCopy.java',
    'taintengine/operations/Store.java',
    'taintengine/operations/Call.java',
    'taintengine/operations/GetElementPointer.java',
    'taintengine/operations/ShiftLeft.java',
    'taintengine/operations/InsertElement.java',
    'taintengine/operations/MethodEntry.java',
    'taintengine/operations/ValueOperation.java',
    'taintengine/operations/Alloc.java',
    'taintengine/operations/Br.java',
    'taintengine/operations/StrnDup.java',
    'taintengine/operations/Trunc.java',
    'taintengine/operations/Strcmp.java',
    'parser/ITraceParser.java',
    'parser/GzipJsonParser.java',
    'main/TaintTracker.java',
]

dep_jar = [
    join_paths(meson.current_source_dir(), 'dependencies', 'msgpack-core-0.8.12.jar'),
    join_paths(meson.current_source_dir(), 'dependencies', 'commons-cli-1.3.1.jar'),
    join_paths(meson.current_source_dir(), 'dependencies', 'gson-2.8.0.jar'),
    join_paths(meson.current_source_dir(), 'dependencies', 'javax.json-api-1.1.2.jar'),
    join_paths(meson.current_source_dir(), 'dependencies', 'javax.json-1.1.2.jar')
]

java_install_dir = join_paths(get_option('libdir'), 'java')

tainttracker = jar('tainttracker', tainttracker_sources,
                   main_class : 'main.TaintTracker',
                   include_directories : [ include_directories('.') ],
                   java_args : ['-cp', ':'.join(dep_jar)],
                   install : true,
                   install_dir : java_install_dir)

install_data(dep_jar, install_dir : java_install_dir)